修复一些转换